--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esther Chung: Personal site and portfolio</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <h1>Esther Chung</h1>
     <p>I am a curious and passionate data scientist that loves food, movies, and TV shows!</p>
+    <img src = "images/my_image.jpeg" alt = "A beautiful and colorful sunset overlooking the ocean" width = "500">
 </body>
 </html>
