--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a>
+        <a href="https://github.com/echungg1" target="_blank">GitHub</a>
+    </nav>
     <h1>Esther Chung</h1>
     <p>I am a curious and passionate data scientist that loves food, movies, and TV shows!</p>
     <img src = "images/my_image.jpeg" alt = "A beautiful and colorful sunset overlooking the ocean" width = "500">
