step 7 and part of 8

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -14,20 +14,11 @@
         <a href = "https://github.com/echungg1" target = "_blank">GitHub</a>
         <a href = "../resume/index.html">Resume</a>
     </nav>
-    <h1>Contact</h1>
-    <form action = "mailto:ec77@gmail.com" method = "POST" enctype = "text/plain">
-        <label>
-            Email:
-            <input name = "email" type = "email">
-        </label>
-        <label>
-            Subject:
-            <input name = "subject">
-        </label>
-        <label>
-            Body:
-            <input name = "body">
-        </label>
-        <button>Submit</button>
+    <header>
+        <h1>Esther Chung</h1>
+        <p>Data Science Student @ University of California San Diego</p>
+        <p>Email: <a href = "mailto:ec77@gmail.com">ec77@gmail.com</a> | 
+            <a href = "https://linkedin.com" target = "_blank">LinkedIn</a></p>
+    </header>
 </body>
 </html>
