--- a/projects/index.html
+++ b/projects/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
+        <a href = "../index.html">Home</a>
+        <a href = "../projects/index.html">Projects</a>
+        <a href = "../contact/index.html">Contact</a>
+        <a href = "https://github.com/echungg1" target = "_blank">GitHub</a>
+        <a href = "../resume/index.html">Resume</a>
     </nav>
     <h1>Projects</h1>
 </body>
