--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href = "index.html">Home</a></li>
+            <li><a href = "index.html" class="current">Home</a></li>
             <li><a href = "projects/index.html">Projects</a></li>
             <li><a href = "contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
@@ -17,7 +17,9 @@
         </ul>
     </nav>
     <h1>Esther Chung</h1>
-    <p>I am a curious and passionate data scientist that loves food, movies, and TV shows!</p>
-    <img src = "images/my_image.jpeg" alt = "A beautiful and colorful sunset overlooking the ocean" width = "500">
+    <img src = "images/my_image.jpeg" alt = "A beautiful and colorful sunset overlooking the ocean">
+    <p>I am a curious and passionate data scientist that loves food, movies, and TV shows! I am currently a second year
+        data science student at UC San Diego!
+    </p>
 </body>
 </html>
