--- a/projects/index.html
+++ b/projects/index.html
@@ -10,12 +10,74 @@
     <nav>
         <ul>
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "../projects/index.html">Projects</a></li>
+            <li><a href = "../projects/index.html" class="current">Projects</a></li>
             <li><a href = "../contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
             <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
     </nav>
     <h1>Projects</h1>
+    <div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit ipsum architecto ex quam laboriosam quisquam magni fuga error asperiores omnis inventore ducimus ratione tenetur voluptatum animi, tempore eligendi magnam. Distinctio?</p>
+        </article>
+        <article>
+            <h2>Ea quam officia voluptatibus.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Est vel accusantium reprehenderit exercitationem maxime explicabo assumenda ratione nulla nisi consectetur iusto minus placeat inventore qui, veniam error laudantium eius repellendus eveniet fugit quae rem dolores. Velit, itaque sed.</p>
+        </article>
+        <article>
+            <h2>Pariatur eos veniam ipsum!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Odit aperiam dolore placeat eum deserunt maxime modi nesciunt vitae amet reprehenderit? Tenetur quod repellat non necessitatibus odio harum cumque, minus earum voluptatem magnam tempora alias ipsam quasi, corporis facere?</p>
+        </article>
+        <article>
+            <h2>Eos reprehenderit harum velit?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quaerat nihil inventore consequatur dignissimos officia voluptas quisquam, rem numquam nesciunt odit sequi exercitationem, nemo ea repellendus hic possimus saepe, eveniet quod labore illo ab expedita minus. Eveniet, necessitatibus veritatis.</p>
+        </article>
+        <article>
+            <h2>Repellendus atque eum fugit!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Voluptatum, cupiditate distinctio? Porro eius inventore sed nostrum ut vitae itaque quis blanditiis ullam, corporis veniam, sint nihil. A magni excepturi ab iusto dolorem modi corrupti ex, reiciendis dolores nihil.</p>
+        </article>
+        <article>
+            <h2>Obcaecati placeat nulla modi!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Omnis deserunt sed iusto ad nisi sit eum obcaecati rerum accusamus laboriosam. Natus libero quos facilis sed laudantium, eveniet beatae voluptas enim, provident cupiditate cum expedita maxime quis dolorem exercitationem?</p>
+        </article>
+        <article>
+            <h2>Iure ad necessitatibus natus!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quasi corrupti illo totam aut nihil nostrum quae inventore mollitia, soluta molestias distinctio vero ea at tenetur dolorem eveniet ratione, pariatur voluptatem fugit fugiat quidem quo eum magnam? Ipsam, ipsa.</p>
+        </article>
+        <article>
+            <h2>Ut tenetur sunt repudiandae.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quis sint eum sit aut officia vel praesentium doloribus ab numquam soluta distinctio ut ratione, esse totam expedita voluptatum adipisci! Nemo nostrum ut fugiat. Omnis aut perferendis fugit esse? Accusamus.</p>
+        </article>
+        <article>
+            <h2>Similique consequuntur cupiditate facere.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Pariatur harum neque excepturi, vitae nesciunt ipsum earum! Est ipsa quaerat rem vitae inventore natus iusto consectetur atque itaque deserunt, praesentium sed suscipit reiciendis doloremque. Qui, debitis modi! Autem, numquam.</p>
+        </article>
+        <article>
+            <h2>Est reprehenderit quas explicabo!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Explicabo, optio maxime est tempora provident nam dolorem, temporibus voluptas eaque nobis fugit soluta deleniti culpa totam quisquam nemo vero repellat hic dolorum fugiat suscipit commodi ipsa? Delectus, asperiores officiis.</p>
+        </article>
+        <article>
+            <h2>Autem assumenda ut corporis.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Molestias est dolorem nesciunt qui ducimus dignissimos nobis perferendis. Recusandae, soluta rerum debitis magnam vitae amet doloremque neque consequatur unde consectetur maiores alias repellat odio repudiandae officia, nulla esse provident.</p>
+        </article>
+        <article>
+            <h2>Sed deleniti repudiandae maxime.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Exercitationem veniam tempora fugit. Nesciunt obcaecati velit recusandae ipsum aperiam veniam praesentium cumque ut laudantium iste cum aliquam rerum alias, quo ipsam error exercitationem dolorem a consectetur tempore? Incidunt, voluptates!</p>
+        </article>
+    </div>
 </body>
 </html>
