--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "../projects/index.html">Projects</a></li>
-            <li><a href = "../contact/index.html">Contact</a></li>
+            <li><a href = "../contact/index.html" class="current">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
             <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
