--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
         </label>
         <label>
             Body:
-            <input name = "body">
+            <textarea name = "body" rows = "5"></textarea>
         </label>
         <button>Submit</button>
 </body>
