--- a/contact/index.html
+++ b/contact/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "../projects/index.html">Projects</a></li>
-            <li><a href = "../contact/index.html" class="current">Contact</a></li>
+            <li><a href = "../contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
             <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <h1>Contact</h1>
     <form action = "mailto:ec77@gmail.com" method = "POST" enctype = "text/plain">
         <label>
@@ -31,5 +31,6 @@
             <textarea name = "body" rows = "5" required></textarea>
         </label>
         <button>Submit</button>
+        <script type="module" src="../global.js"></script>
 </body>
 </html>
