--- a/projects/index.html
+++ b/projects/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href = "../index.html">Home</a></li>
-            <li><a href = "../projects/index.html" class="current">Projects</a></li>
+            <li><a href = "../projects/index.html">Projects</a></li>
             <li><a href = "../contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
             <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <h1>Projects</h1>
     <div class="projects">
         <article>
@@ -79,5 +79,6 @@
             <p>Exercitationem veniam tempora fugit. Nesciunt obcaecati velit recusandae ipsum aperiam veniam praesentium cumque ut laudantium iste cum aliquam rerum alias, quo ipsam error exercitationem dolorem a consectetur tempore? Incidunt, voluptates!</p>
         </article>
     </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
