--- a/resume/index.html
+++ b/resume/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <ul>
             <li><a href = "../index.html">Home</a></li>
             <li><a href = "../projects/index.html">Projects</a></li>
             <li><a href = "../contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
-            <li><a href = "../resume/index.html" class="current">Resume</a></li>
+            <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <header>
         <h1>Resume</h1>
         <h2>Esther Chung</h2>
@@ -87,5 +87,6 @@
             <li><strong>Platforms:</strong> Jupyter Notebook, Visual Studio Code, Intellij IDEA</li>
         </ul>
     </section>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
