--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <ul>
-            <li><a href = "index.html" class="current">Home</a></li>
+            <li><a href = "index.html">Home</a></li>
             <li><a href = "projects/index.html">Projects</a></li>
             <li><a href = "contact/index.html">Contact</a></li>
             <li><a href = "https://github.com/echungg1" target = "_blank">GitHub</a></li>
             <li><a href = "resume/index.html">Resume</a></li>
         </ul>
-    </nav>
+    </nav> -->
     <h1>Esther Chung</h1>
     <img src = "images/my_image.jpeg" alt = "A beautiful and colorful sunset overlooking the ocean">
     <p>I am a curious and passionate data scientist that loves food, movies, and TV shows! I am currently a second year
         data science student at UC San Diego!
     </p>
+    <script type="module" src="./global.js"></script>
 </body>
 </html>
