--- a/contact/index.html
+++ b/contact/index.html
@@ -17,11 +17,7 @@
         </ul>
     </nav> -->
     <h1>Contact</h1>
-    <form action = "mailto:ec77@gmail.com" method = "POST" enctype = "text/plain">
-        <label>
-            Email:
-            <input name = "email" type = "email">
-        </label>
+    <form action = "mailto:ec77@gmail.com" method = "GET">
         <label>
             Subject:
             <input name = "subject">
@@ -31,6 +27,7 @@
             <textarea name = "body" rows = "5" required></textarea>
         </label>
         <button>Submit</button>
-        <script type="module" src="../global.js"></script>
+    </form>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
