--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     <p>I am a curious and passionate data scientist that loves food, movies, and TV shows! I am currently a second year
         data science student at UC San Diego!
     </p>
+
     <script type="module" src="./global.js"></script>
+    <script src="index.js" type="module" defer></script>
+
+    <h2>Latest Projects</h2>
+    <div class="projects">
+    <!-- Dynamically added content will appear here -->
+    </div>
+
+    <h2>My GitHub Stats</h2>
+    <div id="profile-stats"></div>
+
 </body>
 </html>
