--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,9 @@
             <li><a href = "../resume/index.html">Resume</a></li>
         </ul>
     </nav> -->
-    <h1>Projects</h1>
+    <h1 class="projects-title">Projects</h1>
     <div class="projects">
-        <article>
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit ipsum architecto ex quam laboriosam quisquam magni fuga error asperiores omnis inventore ducimus ratione tenetur voluptatum animi, tempore eligendi magnam. Distinctio?</p>
@@ -77,8 +77,10 @@
             <h2>Sed deleniti repudiandae maxime.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Exercitationem veniam tempora fugit. Nesciunt obcaecati velit recusandae ipsum aperiam veniam praesentium cumque ut laudantium iste cum aliquam rerum alias, quo ipsam error exercitationem dolorem a consectetur tempore? Incidunt, voluptates!</p>
-        </article>
+        </article> -->
     </div>
-    <script type="module" src="../global.js"></script>
+    
+    <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
 </body>
 </html>
