--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,12 @@
             <!-- ... -->
         </ul>
     </div>
-      
+    <input
+    class="searchBar"
+    type="search"
+    aria-label="Search projects"
+    placeholder="🔍 Search projects…"
+    />  
     <div class="projects">
         
         <!-- <article>
